support for jpm, jquery upgrade

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "selfoss-notify",
-    "fullName": "Selfoss Notify",
+    "title": "Selfoss Notify",
     "description": "Checks and shows unread items count in your Selfoss RSS reader (http://selfoss.aditu.de)",
     "license": "GPL 3.0",
     "author": "Ivan Strokanev <bahbka@gmail.com>",
     "homepage": "https://github.com/bahbka/selfoss-notify",
-    "version": "0.8.4",
-    "id": "jid1-9A1rrddMJgAZ1g",
+    "version": "0.8.5",
+    "id": "jid1-9A1rrddMJgAZ1g@jetpack",
 
     "preferences": [
     {
